2014-09-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0.5.

2014-09-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 7.0.4 release.

	* CHANGES: Updated.

2014-09-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r20300.

	* nasl/exec.c (exec_nasl_script): Print script path too, on parse
	failure.

2014-09-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r20237.

	* nasl/nasl_lex_ctxt.h (struct_lex_ctxt): Add line_nb element.

	* nasl/nasl_debug (nasl_perror): Print the error's line number after the
	script name.

	* nasl/exec.c (nasl_exec): Set the lexical context's line number.

2014-08-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r20175.

	* omp/xml.c (try_read_entity_and_string, parse_entity)
	(compare_find_attribute, compare_entities): Make log levels more
	precise; change g_message to either g_warning or g_debug based on
	severity.

2014-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r20006.

	* omp/openvas_auth.c (ldap_connect_user_exists): Only define when LDAP
	is enabled.

2014-07-31  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0.4.

2014-07-31  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 7.0.3 release.

	* CHANGES: Updated.

2014-07-31  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r19992.

	* omp/openvas_auth.c (add_authenticator): Use custom function for
	user_exists, because openvas_user_exists_classic looks only for users
	of type "file".
	(ldap_connect_user_exists): New function.

2014-06-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backport r19768.

	* base/cvss.c (toenum): Also accept "AU" as "Au".

2014-06-20  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r19718.
